<resources>
    <string name="app_name">FoodStoreChallengeChapter3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_header_name">Hai Binarian</string>
    <string name="text_header_greeting">Mau makan apa hari ini?</string>
    <string name="text_search">Searching</string>
    <string name="text_discount">Diskon 30%</string>
    <string name="text_complement_discount">Pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="text_category_menu_1">Snack</string>
    <string name="text_category_menu_2">Minuman</string>
    <string name="text_category_menu_3">Burger</string>
    <string name="text_category_menu_4">Dessert</string>
    <string name="text_title_list_menu">List Menu Makanan</string>
    <string name="tv_desc_button">Tambah ke Keranjang - Rp. %1$d</string>
</resources>